modules/vpc/nat.tf
## NAT

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "${var.public_subnet_name}-nat"
  }
}
